fix(caps utility): remove massive letter-spacing from .caps class

--- a/src/scss/elements/_typography.scss
+++ b/src/scss/elements/_typography.scss
@@ -52,7 +52,7 @@ h6, .h6 { font-size: $h6; }
 .bold    { font-weight: bold; }
 .regular { font-weight: normal; }
 .italic  { font-style: italic; }
-.caps    { letter-spacing: 0.2em; text-transform: uppercase; }
+.caps    { text-transform: uppercase; }
 
 .left-align   { text-align: left; }
 .center       { text-align: center; }
